--- a/index.html
+++ b/index.html
@@ -265,9 +265,10 @@
     <div class="wrapper">
 
 
-        <div class="regions">
+
+        <div class="soutien">
             <h2 class="title">Avec le soutien de </h2>
-            <div class="regions-list">
+            <div class="regions-list logo-list">
                 <img src="images/regions/auvergne-rhones-alpe.svg" alt="auvergne">
                 <img src="images/regions/bourgogne-franche-compte.svg" alt="bourgogne">
                 <img src="images/regions/bretagne.svg" alt="bretagne">
@@ -282,14 +283,32 @@
                 <img src="images/regions/paca.svg" alt="paca">
                 <img src="images/regions/pays-de-la-loire.svg" alt="pays-de-la-loire">
             </div>
-            <div class="financeurs grid-box">
+            <div class="financeurs grid-box logo-list">
                 <img src="images/financeurs/fse.png" alt="fse">
                 <img src="images/financeurs/nextgeneu.svg" alt="nextgenEU">
                 <img src="images/financeurs/france-relance.svg" alt="france relance">
                 <img src="images/financeurs/synofdes.png" alt="synofdes">
-
             </div>
+
+
         </div>
+
+        <div class="socials logo-list">
+            <a href="#"><img src="images/socials/facebook.svg" alt=""></a>
+            <a href="#"><img src="images/socials/linkedin.svg" alt=""></a>
+            <a href="#"><img src="images/socials/twitter.svg" alt=""></a>
+            <a href="#"><img src="images/socials/youtube.svg" alt=""></a>
+        </div>
+
+        <div class="legals">
+            <p><a href="#">Fournisseurs</a> | <a href="#">CGV</a> | <a href="#">Règlement intérieur stagiaires</a> | <a href="#">Règlement
+                COVID-19</a> | <a href="#">Nous contacter</a> | <a href="#">Réclamations</a> | <a href="#">Conformité</a></p>
+            <br>
+            <p><a href="#">Liens utiles</a> | <a href="#">Plan du site</a> | <a href="#">Politique de protection des données</a> |
+                <a href="#">Cookies</a> | <a href="#">CGU</a> | <a href="#">Accessibilité</a> | <a href="#">Crédits</a> |
+                <a href="#">Mentions légales</a> | <a href="#">Espace presse</a></p>
+        </div>
+
     </div>
 </footer>
 </body>
