--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@
 <!--FOOTER-->
 <footer>
     <div class="wrapper">
+
+        <!-- LOGOS REGIONS / FINANCEURS       -->
         <div class="soutien">
             <h2 class="title">Avec le soutien de </h2>
             <div class="regions-list logo-list">
@@ -297,6 +299,7 @@
             </div>
         </div>
 
+        <!-- LOGOS RESEAUX SOCIAUX       -->
         <div class="socials logo-list">
             <a href="#"><img src="images/socials/facebook.svg" alt=""></a>
             <a href="#"><img src="images/socials/linkedin.svg" alt=""></a>
@@ -304,6 +307,7 @@
             <a href="#"><img src="images/socials/youtube.svg" alt=""></a>
         </div>
 
+        <!-- MENTIONS LEGALES       -->
         <div class="legals">
             <p><a href="#">Fournisseurs</a> | <a href="#">CGV</a> | <a href="#">Règlement intérieur stagiaires</a> | <a href="#">Règlement
                 COVID-19</a> | <a href="#">Nous contacter</a> | <a href="#">Réclamations</a> | <a href="#">Conformité</a></p>
