--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-        <!-- TOP RIGHT PANEL - TODO Slider -->
+        <!-- TOP RIGHT PANEL -->
         <div class="two">
             <div class="carousel">
                 <div class="info-bar">
